UI change to JDK 21